--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
+  background-color: #abb2b9;
 }
+.App {
+  width: 400px;
+  height: auto;
+  background-color: #4a235a;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+}
+.App h1 {
+  color: white;
+}
+.inputfield {
+  padding: 10px 0px;
+  text-align: center;
+  border-radius: 20px;
+  border: none;
+  border-color: none;
+  border: none;
+}
+.addbutton {
+  color: #abb2b9;
+  padding: 0px 10px;
+  border-radius: 5px;
+  font-size: 20px;
+  background-color: #A93226;
+  border: none;
+  border-color: none;
+}
+.addbutton:hover{
+    background-color: #239B56;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+}
+.todolist{
+    color: white;
+    letter-spacing: 3px;
+
 }
